@@ -1,46 +1,57 @@
 package jaeik.growfarm.infrastructure.adapter.admin.out.persistence;
 
+import com.querydsl.jpa.impl.JPAQueryFactory;
+import jaeik.growfarm.GrowfarmApplication;
 import jaeik.growfarm.domain.admin.entity.Report;
 import jaeik.growfarm.domain.admin.entity.ReportType;
+import jaeik.growfarm.domain.common.entity.SocialProvider;
+import jaeik.growfarm.domain.user.entity.Setting;
 import jaeik.growfarm.domain.user.entity.User;
 import jaeik.growfarm.domain.user.entity.UserRole;
-import jaeik.growfarm.domain.user.entity.Setting;
-import jaeik.growfarm.domain.common.entity.SocialProvider;
 import jaeik.growfarm.infrastructure.adapter.admin.in.web.dto.ReportDTO;
+import jaeik.growfarm.infrastructure.security.EncryptionUtil;
+import jakarta.persistence.EntityManager;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.autoconfigure.domain.EntityScan;
+import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
+import org.springframework.boot.test.context.TestConfiguration;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.ComponentScan;
+import org.springframework.context.annotation.FilterType;
+import org.springframework.context.annotation.Import;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.test.context.DynamicPropertyRegistry;
+import org.springframework.test.context.DynamicPropertySource;
 import org.springframework.test.context.TestPropertySource;
-import org.springframework.transaction.annotation.Transactional;
 import org.testcontainers.containers.MySQLContainer;
 import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
 
-import jakarta.persistence.EntityManager;
-
 import static org.assertj.core.api.Assertions.assertThat;
 
-/**
- * <h2>AdminQueryAdapter 통합 테스트</h2>
- * <p>@SpringBootTest를 사용한 전체 컨텍스트 통합 테스트</p>
- * <p>MySQL TestContainer와 실제 QueryDSL 동작을 검증</p>
- * 
- * @author Jaeik
- * @version 2.0.0
- */
-@SpringBootTest
+@DataJpaTest(
+        excludeFilters = @ComponentScan.Filter(
+                type = FilterType.ASSIGNABLE_TYPE,
+                classes = GrowfarmApplication.class
+        )
+)
 @Testcontainers
-@TestPropertySource(properties = {
-    "spring.datasource.url=jdbc:mysql://localhost:${mysql.port}/testdb",
-    "spring.datasource.username=test",
-    "spring.datasource.password=test",
-    "spring.jpa.hibernate.ddl-auto=create-drop",
-    "spring.jpa.defer-datasource-initialization=true"
+@EntityScan(basePackages = {
+        "jaeik.growfarm.domain.admin.entity", 
+        "jaeik.growfarm.domain.user.entity",
+        "jaeik.growfarm.domain.paper.entity",
+        "jaeik.growfarm.domain.post.entity",
+        "jaeik.growfarm.domain.comment.entity",
+        "jaeik.growfarm.domain.notification.entity",
+        "jaeik.growfarm.domain.common.entity"
 })
-@Transactional
+@Import(AdminQueryAdapter.class)
+@TestPropertySource(properties = {
+        "spring.jpa.hibernate.ddl-auto=create-drop"
+})
 class AdminQueryAdapterIntegrationTest {
 
     @Container
@@ -49,26 +60,50 @@ class AdminQueryAdapterIntegrationTest {
             .withUsername("test")
             .withPassword("test");
 
+    @DynamicPropertySource
+    static void dynamicProperties(DynamicPropertyRegistry registry) {
+        registry.add("spring.datasource.url", mysql::getJdbcUrl);
+        registry.add("spring.datasource.username", mysql::getUsername);
+        registry.add("spring.datasource.password", mysql::getPassword);
+    }
+
+    @TestConfiguration
+    static class TestConfig {
+        @Bean
+        public JPAQueryFactory jpaQueryFactory(EntityManager entityManager) {
+            return new JPAQueryFactory(entityManager);
+        }
+
+        // EncryptionUtil 빈 정의: MessageEncryptConverter의 의존성을 만족시킵니다.
+        @Bean
+        public EncryptionUtil encryptionUtil() {
+            // 테스트를 위해 간단한 더미 인스턴스를 반환합니다.
+            // 실제 EncryptionUtil이 복잡한 의존성을 가진다면 Mockito.mock(EncryptionUtil.class)를 사용할 수 있습니다.
+            return new EncryptionUtil();
+        }
+    }
+
     @Autowired
     private AdminQueryAdapter adminQueryAdapter;
 
     @Autowired
     private EntityManager entityManager;
 
+
+
     /**
      * <h3>신고 목록 페이지네이션 조회 테스트 - 전체 조회</h3>
-     * <p>reportType이 null일 때 모든 신고를 페이지네이션하여 조회하는지 검증</p>
      */
     @Test
     void shouldReturnAllReports_WhenReportTypeIsNull() {
         // Given: 테스트 데이터 생성
         User reporter1 = createAndSaveUser("reporter1", "소셜ID1");
         User reporter2 = createAndSaveUser("reporter2", "소셜ID2");
-        
+
         createAndSaveReport(reporter1, ReportType.POST, 1L, "게시글 신고");
         createAndSaveReport(reporter2, ReportType.COMMENT, 2L, "댓글 신고");
         createAndSaveReport(reporter1, ReportType.PAPER, 3L, "롤링페이퍼 신고");
-        
+
         entityManager.flush();
         entityManager.clear();
 
@@ -80,9 +115,9 @@ class AdminQueryAdapterIntegrationTest {
         // Then: 모든 신고가 조회되는지 검증
         assertThat(result.getContent()).hasSize(3);
         assertThat(result.getTotalElements()).isEqualTo(3);
-        
+
         // ReportDTO 매핑 검증
-        ReportDTO firstReport = result.getContent().get(0);
+        ReportDTO firstReport = result.getContent().getFirst();
         assertThat(firstReport.getReporterId()).isNotNull();
         assertThat(firstReport.getReporterName()).isNotNull();
         assertThat(firstReport.getContent()).isNotNull();
@@ -91,17 +126,16 @@ class AdminQueryAdapterIntegrationTest {
 
     /**
      * <h3>신고 목록 페이지네이션 조회 테스트 - 특정 타입 필터링</h3>
-     * <p>특정 ReportType으로 필터링하여 조회하는지 검증</p>
      */
     @Test
     void shouldReturnFilteredReports_WhenReportTypeIsSpecified() {
         // Given: 다양한 타입의 신고 데이터 생성
         User reporter = createAndSaveUser("reporter", "소셜ID");
-        
+
         createAndSaveReport(reporter, ReportType.POST, 1L, "게시글 신고 1");
         createAndSaveReport(reporter, ReportType.POST, 2L, "게시글 신고 2");
         createAndSaveReport(reporter, ReportType.COMMENT, 3L, "댓글 신고");
-        
+
         entityManager.flush();
         entityManager.clear();
 
@@ -135,7 +169,7 @@ class AdminQueryAdapterIntegrationTest {
                 .socialNickname(userName + "_nickname")
                 .setting(setting)
                 .build();
-        
+
         entityManager.persist(user);
         return user;
     }
@@ -150,7 +184,7 @@ class AdminQueryAdapterIntegrationTest {
                 .targetId(targetId)
                 .content(content)
                 .build();
-        
+
         entityManager.persist(report);
         return report;
     }
